# cpp

./: CMakeLists.txt  README.md
src/: faux_combinator.hpp
test/: faux_combinator.cpp
